feat: adiciona novas exceções para tratamento de erros e refatora mensagens de erro; atualiza DTOs e serviços com melhorias de código